# streaming-server

./: .dockerignore  .gitignore  README.md  docker-compose.yaml
backend/: pyproject.toml
backend/fast_api/: main.py
backend/fast_api/routers/: chat.py
backend/fast_api/schemas/: chat.py
backend/fast_api/services/: open_ai.py
backend/fast_api/utils/: config.py
backend/grpc_api/proto/: codegen.py
backend/grpc_api/src/: main.py
backend/grpc_api/src/proto/: streaming_server_pb2.py  streaming_server_pb2.pyi  streaming_server_pb2_grpc.py
backend/grpc_api/src/server/: streaming_server.py
backend/grpc_api/src/services/: open_ai.py
backend/grpc_api/src/utils/: config.py
backend/requirements/: chat.txt
docker/: Dockerfile  Dockerfile.backend  Dockerfile.envoy  Dockerfile.frontend  Dockerfile.nginx
envoy/: envoy.yaml
frontend/: buf.gen.yaml  package.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/components/: StreamingForm.tsx
frontend/src/proto/: streaming_server.proto  streaming_server_connectweb.d.ts  streaming_server_connectweb.js  streaming_server_connectweb.ts  streaming_server_pb.d.ts  streaming_server_pb.js  streaming_server_pb.ts
frontend/src/proto-web/: streaming_server_grpc_web_pb.d.ts  streaming_server_grpc_web_pb.js  streaming_server_pb.d.ts  streaming_server_pb.js
k8s/: deployment.yaml  service.yaml
nginx/: nginx.local.conf  nginx.prod.conf
